# universal-modules

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
docs/: README.md  module-documentation-template.md
scripts/: update-documentation.py  update-readmes.py  version-manager.py
